--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ aprendiendo git
 <body>
     <h1>Aprendiendo git</h1>
     <h2>llueve en bogota</h2>
-    <p>programacion</p>
+    <p>programacion mintic</p>
 </body>
 </html>
